    QUrl::fromEncoded().

    QUrl now operates in a mode where it decodes as much as it can of the
    percent-encoding sequences. In addition, the setter methods possess a mode
    in which a '%' character not part of a percent-encoding sequence will cause
    the parser to correct the input. Therefore, most software will not require
    changes to adapt, since the getter methods will continue returning the
    components in their most-decoded form as they did before and the setter
    methods will accept input as they did before..

    The most notable difference is when dealing with
    QUrl::toString(). Previously, this function would return percent characters
    in the URL by themselves. Now, it will return "%25", like
    QUrl::toEncoded().

- QVariant

  * Definition of QVariant::UserType changed. Currently it is the same as
    QMetaType::User, which means that it points to the first registered custom
    type, instead of a nonexistent type.

- QMetaType

  * Interpretation of QMetaType::Void was changed. Before, in some cases
    it was returned as an invalid type id, but sometimes it was used as a valid
    type (C++ "void"). In Qt5, new QMetaType::UnknownType was introduced to
    distinguish between these two. QMetaType::UnknownType is an invalid type id
    signaling that a type is unknown to QMetaType, and QMetaType::Void
    is a valid type id of C++ void type. The difference will be visible for
    example in call to QMetaType::typeName(), this function will return null for
    QMetaType::UnknownType and a pointer to "void" string for
    QMetaType::Void.
    Please, notice that QMetaType::UnknownType has value 0, which previously was
    reserved for QMetaType::Void.


- QMessageBox

     * The static function QMessageBox::question has changed the default argument
     for buttons. Before the default was to have an Ok button. That is changed
     to having a yes and a no button.