@@ -47,6 +47,7 @@ int main(int argc, char *argv[])
     Q_INIT_RESOURCE(configdialog);
 
     QApplication app(argc, argv);
+    app.setApplicationDisplayName("Qt Example");
     ConfigDialog dialog;
     return dialog.exec();
 }
